--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,6 @@
-html, body, #app {
+html,
+body,
+#app {
   height: 100vh;
   width: 100vw;
 }
@@ -15,6 +17,22 @@ body {
 
   .h-1 {
     height: 100%;
+  }
+
+  .live-btn {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    transition: all 0.2s ease;
+
+    /* 鼠标悬停 */
+    &:hover {
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    }
+
+    /* 鼠标按下 */
+    &:active {
+      transform: scale(0.95);
+      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
   }
 
 }
